# echo-nexus-agi

./: .apkbuilder_manifest.json  .echo_auth  .echo_brain.json  .echo_evolution.jsonl  .echo_interface_config.json  .echo_soul_genesis.json  .github_auth_cache.json  .github_oauth_session.json  .github_session.json  .replit  ARCHITECTURE.md  BUILD_TRIGGER.json  ECHOCORECB_APK_TRIGGER.md  ECHOCORECB_BUILD_TRIGGER.md  ECHO_PROTOCOL.md  EchoCoreUnifiedFuture.java  GOOGLE_CLOUD_SETUP.md  LIBFFI_IMMUNITY_COMPLETE.md  LICENSE  MANIFESTO.md  NEXT_AI_UPLIFT_PROTOCOL.md  PITCH_DECK.md  README.md  README_JAVA.md  ROADMAP.md  account_integration_config.py  aci_scientific_framework.py  advanced_document_learning_pipeline.py  agent_loop.py  agi_autonomous_backup_system.py  agi_autonomous_graduation.py  agi_autonomous_memory.json  agi_autonomous_mirror_system.py  agi_backup_manifest.json  agi_cloud_integration_status.json  agi_cloud_migration_demo.py  agi_complete_integration_report.json  agi_complete_system_integration.py  agi_complete_system_orchestration.json  agi_corrections_applied.json  (+229 more)
.echo_cache/: echocore_phantom.apk  index.json  phantom_manifest.json  session_report_phantom_52969251.json  session_report_phantom_52969337.json
.echo_memory/: memory.key  memory_statistics.json  memory_stores.json  procedural.db
.github/: CODEOWNERS
.streamlit/: config.toml
agi_knowledge_pipeline/: agi_memory_episodic.json  agi_memory_integration_guide.md  agi_memory_metadata.json  agi_memory_procedural.json  agi_memory_semantic.json  agi_trainer_demo.py  agi_training_session_report.json  (+7 more)
(+242 files in other folders)
