[metadata]
name = echocorecb
version = 1.0.0
description = EchoCore: Self-Compiling AGI Framework
long_description = file: README.md

[options]
packages = find:
install_requires =
    kivy==2.3.0
    kivymd
    requests
    pygithub
    openai
    pyjnius
    jnius
    plyer

[options.entry_points]
console_scripts =
    echocorecb = echocorecb.main:run

[options.extras_require]
android_apk =
    android
linux_bin =
    linux
termux =
    termux-tools